--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "add": "^2.0.6",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
@@ -11,7 +15,8 @@
     "react-dom": "^16.8.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "yarn": "^1.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
