name package json changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "caribbeans-food-mix",
+  "name": "website-lagrillade",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
