--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "website-lagrillade",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jiovanyvincent.github.io/website-lagrillade",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
