--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website-lagrillade",
   "version": "0.1.0",
-  "homepage": "https://jiovanyvincent.github.io/lagrillade.com",
+  "homepage": "https://website-lagrillade.com",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
